--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <title>Hiking Facts Generator</title>
     <style>
         body {
-            background: url('https://example.com/hiker-background.jpg') no-repeat center center fixed; /* Replace with your image URL */
-            background-size: cover;
+            background: linear-gradient(to bottom right, #4facfe, #00f2fe);
             color: white;
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             text-align: center;
             padding: 50px;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+        }
+        h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            transition: transform 0.3s;
+        }
+        h1:hover {
+            transform: scale(1.1);
         }
         #fact {
             font-size: 24px;
@@ -19,12 +33,13 @@
             padding: 20px;
             border: 2px solid white;
             border-radius: 10px;
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+            background-color: rgba(0, 0, 0, 0.6); /* Darker semi-transparent background */
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
             transition: transform 0.3s, box-shadow 0.3s;
         }
         #fact:hover {
             transform: scale(1.05);
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
         }
         button {
             padding: 10px 20px;
@@ -35,17 +50,13 @@
             background-color: #ffffff;
             color: #4facfe;
             transition: background-color 0.3s, transform 0.3s;
+            font-weight: bold;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
         button:hover {
             background-color: #e0e0e0;
             transform: scale(1.1);
-        }
-        h1 {
-            margin-bottom: 20px;
-            transition: transform 0.3s;
-        }
-        h1:hover {
-            transform: scale(1.1);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
         }
     </style>
 </head>
